--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -4755,13 +4755,19 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 -Bug fix for saved scroll position on secondary pages (after page reload)
 
 
--Solana support to address-balance-tracker plugin
+-Solana support for address-balance-tracker plugin
 
 
--Privacy mode feature for address-balance-tracker plugin
+-Additional privacy mode setting for address-balance-tracker plugin
 
 
--Better low resolution support for price charts
+-Better low screen resolution support for price charts
+
+
+-Revised documntation
+
+
+-Misc. UX
 
 
 v5.03.5 and higher renames the admin config array. ALL CONFIGURATION SETTING
