Bug fixes for PHP v8.x support
Bug fixes for PHP v8.x support

--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -41,6 +41,9 @@ OPTIMIZATIONS / BUGS / TESTS / UX / QA / OTHER SECTION
 ///////////////////////////////////////////////////////
 
 
+Overhaul / optimize config checks.
+
+
 Add a dedicated system chart file for plugin cron stats ONLY (runtime seconds, etc).
 
 
