--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -4811,6 +4811,28 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
 
 
+-------------------------------------------------------------------
+5.03.10:
+
+
+-Bug fixes for the auto-install script
+
+
+-Privacy Mode to quickly hide your personal portfolio data with one click, and 6 digit PIN protection to unlock
+
+
+-Misc. UX
+
+
+v5.03.5 and higher renames the admin config array. ALL CONFIGURATION SETTING
+VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP, AND
+MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
+
+
+-------------------------------------------------------------------
+
+
+
 
 
 
