SPL (Solana) sub-token support in address-balance-tracker plugin
SPL (Solana) sub-token support in address-balance-tracker plugin

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -4861,6 +4861,27 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
 
 
+-------------------------------------------------------------------
+5.04:
+
+
+-SPL (Solana) sub-token support in address-balance-tracker plugin
+
+
+-Misc. UX
+
+
+v5.03.5 and higher renames the admin config array. ALL CONFIGURATION SETTING
+VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP, AND
+MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
+
+
+-------------------------------------------------------------------
+
+
+
+
+
 
 
 
