--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -4865,6 +4865,9 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 5.04:
 
 
+-'generic_btc' market, for assets with no known exchange-specific available API markets yet (but are listed on marketcap sites)
+
+
 -SPL (Solana) sub-token support in address-balance-tracker plugin
 
 
