--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -4906,3 +4906,20 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
 -------------------------------------------------------------------
 
+
+
+-------------------------------------------------------------------
+5.04.2:
+
+
+-Bug fix for email updated news feeds
+
+
+v5.03.5 and higher renames the admin config array. ALL CONFIGURATION SETTING
+VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP, AND
+MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
+
+
+-------------------------------------------------------------------
+
+
