--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -4947,10 +4947,19 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 5.06.0:
 
 
+-Better Windows 10 task scheduler support
+
+
 -Better 'generic_usd' / 'generic_btc' market support (via coingecko using asset API IDs)
 
 
--Added 'generic_eth' market
+-Added 'generic_X' market ability for adding coin markets (see README.txt / Help page)
+
+
+-Optimizations
+
+
+-Misc. UX / cleanup
 
 
 v5.03.5 and higher renames the admin config array. ALL CONFIGURATION SETTING
