--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -4972,10 +4972,10 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
 
 -------------------------------------------------------------------
-5.07.0:
+5.06.1:
 
 
--Improved UX on removing / updating stale cache files for price-target-alert / recurring-reminder plugins
+-Bug fixes related to removing / updating stale cache files for price-target-alert / recurring-reminder plugins
 
 
 v5.03.5 and higher renames the admin config array. ALL CONFIGURATION SETTING
