--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -5023,7 +5023,7 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 5.09.0:
 
 
--
+-Better UX (error notices) on security token mis-match / stale token
 
 
 v5.03.5 and higher renames the admin config array. ALL CONFIGURATION SETTING
