Content / Documentation revisions
Content / Documentation revisions

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -5108,6 +5108,9 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 -Better privacy mode UX / security
 
 
+-Content / Documentation revisions
+
+
 v5.03.5 and higher renames the admin config array. ALL CONFIGURATION SETTING
 VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP, AND
 MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
