--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -5133,6 +5133,9 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 -ByBit exchange API support
 
 
+-Misc. UX
+
+
 v5.03.5 and higher renames the admin config array. ALL CONFIGURATION SETTING
 VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP, AND
 MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
