UX, system resource warning log / email features
UX, system resource warning log / email features

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -5124,6 +5124,9 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 5.13.0:
 
 
+-Error log and email warnings, if any system resource usage is above thresholds (thresholds adjustable in admin config power user section)
+
+
 -Optimized system stats logic
 
 
