--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -5121,10 +5121,16 @@ MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.
 
 
 -------------------------------------------------------------------
-5.13.0:
+5.12.1:
+
+
+-Bug fix that may cause assets to not display on the portfolio page
 
 
 -Error log and email warnings, if any system resource usage is above thresholds (thresholds adjustable in admin config power user section)
+
+
+-Added upgrade description and manual download link to upgrade notices (for email / telegram / UI)
 
 
 -Optimized system stats logic
