--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -218,6 +218,9 @@ FEATURES / STRUCTURING SECTION
 ///////////////////////////////////////////////////////
 
 
+Look into adding temp monitoring upport for systems other than raspi devices: https://phoenixnap.com/kb/linux-cpu-temp
+
+
 A good demo app for building out the interface hooks for plugins to support the GUI runtime (not just the cron runtime), would be a monthly interest cost calculator on debt (credit cards / loans / etc).
 
 
