--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -46,6 +46,9 @@ markets_ to mrkts_
 leverage_ to lvrg_
 
 
+Consider adding some SPECIFIC filenames that are sensitive data to obfusc_path_data() via the $file = basename($path) method. Not sure if needed for log security, BUT right now obfusc_path_data() DOES #NOT# OBFUSCATE THE FILENAME AT ALL (just path up to the file).
+
+
 Since we already wait for the page to load for initiating batch-grabbing news feeds(?), maybe we can store the user-selected feeds in local storage, since the data set is potentially VERY large (to save alot on cookie header data)? Look over the batch loading logic, and see if we can do it more with JavaScript instead of PHP (except for the batch calls endpoint on the server). Same should generally go for price charts (as we load after the page has loaded), so look into that too.
 
 
